--- a/package.json
+++ b/package.json
@@ -1,17 +1,26 @@
 {
-    "name": "thinkloop",
-    "version": "1.0.0",
-    "description": "A web platform designed to empower users with rapid iterative thinking capabilities.",
-    "main": "app.js",
-    "scripts": {
-        "start": "serve .",
-        "format": "prettier --write ."
-    },
-    "author": "MaxSoft",
-    "license": "ISC",
-    "devDependencies": {
-        "serve": "^14.2.1",
-        "eslint": "^8.56.0",
-        "prettier": "^3.2.5"
-    }
+  "name": "thinkloop",
+  "version": "1.0.0",
+  "description": "A web platform designed to empower users with rapid iterative thinking capabilities.",
+  "main": "app.js",
+  "type": "module",
+  "scripts": {
+    "start": "node app.js",
+    "dev": "nodemon app.js",
+    "lint": "eslint .",
+    "format": "prettier --write ."
+  },
+  "author": "MaxSoft",
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.19.2"
+  },
+  "devDependencies": {
+    "eslint": "^8.57.0",
+    "nodemon": "^3.1.0",
+    "prettier": "^3.2.5"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  }
 }
