--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "author": "MaxSoft",
     "license": "ISC",
     "dependencies": {
+        "@google/generative-ai": "^0.24.0",
         "express": "^4.19.2"
     },
     "devDependencies": {
