--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "start": "node app.js",
         "dev": "nodemon app.js",
         "lint": "eslint .",
-        "format": "prettier --write ."
+        "format": "prettier --write .",
+        "autocode": "bunx autocode"
     },
     "author": "MaxSoft",
     "license": "ISC",
