--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -39,7 +39,7 @@ jobs:
                   docker buildx build \
                   --platform linux/arm64/v8 \
                   --output "type=image,push=true" \
-                  --tag ${{ secrets.DOCKER_USERNAME }}/auto \
+                  --tag ${{ secrets.DOCKER_USERNAME }}/autovibe \
                   .
 
     deploy:
