--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "license": "ISC",
     "dependencies": {
         "@google/generative-ai": "^0.24.0",
-        "express": "^4.19.2"
+        "express": "^4.19.2",
+        "morgan": "^1.10.0"
     },
     "devDependencies": {
         "eslint": "^8.57.0",
